💄 Fixed Button collapse and added new Header link

--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -10,6 +10,7 @@
 	border-radius: 8px;
 	padding: 10px 20px;
 	border: 1px solid;
+	white-space: nowrap;
 }
 
 .blue {
