--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -14,10 +14,6 @@
 	padding: 0px 40px;
 }
 
-.bold-text {
-	line-height: 1.5 !important;
-}
-
 .home {
 	width: 100%;
 	max-width: 1080px;
@@ -44,6 +40,17 @@
 	display: flex;
 	flex-direction: column;
 	gap: 32px;
+}
+
+.banner-title {
+	width: 100%;
+	gap: 16px;
+	display: flex;
+	flex-direction: column;
+}
+
+.bold-text {
+	line-height: 1.5 !important;
 }
 
 .right-column {
